Made changes to dais theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,11 @@
                 {{ site.app_description }}
               </p>
             </div>
+            <div class="appLongDescriptionContainer">
+              <p class="appLongDescription">
+                {{ site.app_long_description }}
+              </p>
+            </div>
             <div class="downloadButtonsContainer">
               {% if site.playstore_link %}
               <a class="playStoreLink" href="{{site.playstore_link}}"
